--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>36 - Adding details the scene</title>
+   <!-- Primary Meta Tags -->
+
+<meta name="title" content="3D Website">
+<meta name="description" content="Little 3D interactive environment created with Three.js">
+
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://3denvironment.netlify.app/">
+<meta property="og:title" content="3D Website">
+<meta property="og:description" content="Little 3D interactive environment created with Three.js">
+<meta name="image" property="og:image" content="./mainimg.png">
+
+<title>3D Website</title>
 </head>
 <body>
     <canvas class="webgl"></canvas>
